@@ -65,6 +65,11 @@ maint jit dump
   ** '-thread-info' result output includes new fields: execution-mask and
      simd-width, if the thread has SIMD lanes.
 
+  ** '-device-info'
+
+     Added new MI command '-device-info' which is equivalent to CLI command
+     'info devices'.
+
 * New remote packets
 
 qXfer:libraries:read's response
